# homotopy_guided_footstep_planner

./: .gitignore  LICENSE  README.md
src/: .rosinstall
src/footstep_planner/: CMakeLists.txt  package.xml
src/footstep_planner/include/footstep_planner/environment/: environment_interpreter.h
src/footstep_planner/include/footstep_planner/graphs/: homotopy_information.h  nav_lattice_2D.h  nav_lattice_8D.h
src/footstep_planner/include/footstep_planner/heuristics/: backward_dijkstra_heuristic.h  homotopy_based_heuristic.h
src/footstep_planner/include/footstep_planner/planners/: dijkstra.h  hbsp.h  mha.h
src/footstep_planner/include/footstep_planner/rviz/: visualize.h
src/footstep_planner/launch/: footstep_planner.launch  project_environment.launch
src/footstep_planner/proto/: README.md  beams.msg  gates.msg  robot_parameters.msg  valid_stepping_cells.msg
src/footstep_planner/python/: README.md  create_test_scenarios.py  visualize_projections.py
src/footstep_planner/python/environment/: environment_interpreter.py
src/footstep_planner/python/graphs/: homotopy_information.py  point.py
src/footstep_planner/python/interfaces/: user_interface.py
src/footstep_planner/python/proto/: environment_projections_pb2.py  homotopy_information_pb2.py  robot_parameters_pb2.py
src/footstep_planner/rviz/: vis.rviz  visualize.cpp
src/footstep_planner/scenarios/: toy.yaml
src/footstep_planner/scenarios/dijkstra/: dijkstra_test_1.yaml  dijkstra_test_10.yaml  dijkstra_test_11.yaml  dijkstra_test_12.yaml  dijkstra_test_13.yaml  dijkstra_test_14.yaml  dijkstra_test_15.yaml  dijkstra_test_16.yaml  dijkstra_test_17.yaml  dijkstra_test_18.yaml  dijkstra_test_19.yaml  dijkstra_test_2.yaml  dijkstra_test_20.yaml  dijkstra_test_21.yaml  dijkstra_test_22.yaml  dijkstra_test_23.yaml  dijkstra_test_24.yaml  dijkstra_test_25.yaml  dijkstra_test_26.yaml  dijkstra_test_27.yaml  dijkstra_test_28.yaml  dijkstra_test_29.yaml  dijkstra_test_3.yaml  dijkstra_test_30.yaml  dijkstra_test_31.yaml  dijkstra_test_32.yaml  dijkstra_test_33.yaml  dijkstra_test_34.yaml  dijkstra_test_35.yaml  dijkstra_test_36.yaml  dijkstra_test_37.yaml  dijkstra_test_38.yaml  dijkstra_test_39.yaml  dijkstra_test_4.yaml  dijkstra_test_40.yaml  dijkstra_test_41.yaml  dijkstra_test_42.yaml  dijkstra_test_43.yaml  dijkstra_test_44.yaml  dijkstra_test_45.yaml  (+40 more)
src/footstep_planner/scenarios/hbsp_1/: hbsp_test_10_1.yaml  hbsp_test_11_1.yaml  hbsp_test_12_1.yaml  hbsp_test_13_1.yaml  hbsp_test_14_1.yaml  hbsp_test_15_1.yaml  hbsp_test_16_1.yaml  hbsp_test_17_1.yaml  hbsp_test_18_1.yaml  hbsp_test_19_1.yaml  hbsp_test_1_1.yaml  hbsp_test_20_1.yaml  hbsp_test_21_1.yaml  hbsp_test_22_1.yaml  hbsp_test_23_1.yaml  hbsp_test_24_1.yaml  hbsp_test_25_1.yaml  hbsp_test_26_1.yaml  hbsp_test_27_1.yaml  hbsp_test_28_1.yaml  hbsp_test_29_1.yaml  hbsp_test_2_1.yaml  hbsp_test_30_1.yaml  hbsp_test_31_1.yaml  hbsp_test_32_1.yaml  hbsp_test_33_1.yaml  hbsp_test_34_1.yaml  hbsp_test_35_1.yaml  hbsp_test_36_1.yaml  hbsp_test_37_1.yaml  hbsp_test_38_1.yaml  hbsp_test_39_1.yaml  hbsp_test_3_1.yaml  hbsp_test_40_1.yaml  hbsp_test_41_1.yaml  hbsp_test_42_1.yaml  hbsp_test_43_1.yaml  hbsp_test_44_1.yaml  hbsp_test_45_1.yaml  hbsp_test_46_1.yaml  (+40 more)
src/footstep_planner/scenarios/hbsp_3/: hbsp_test_10_3.yaml  hbsp_test_11_3.yaml  hbsp_test_12_3.yaml  hbsp_test_13_3.yaml  hbsp_test_14_3.yaml  hbsp_test_15_3.yaml  hbsp_test_16_3.yaml  hbsp_test_17_3.yaml  hbsp_test_18_3.yaml  hbsp_test_19_3.yaml  hbsp_test_1_3.yaml  hbsp_test_20_3.yaml  hbsp_test_21_3.yaml  hbsp_test_22_3.yaml  hbsp_test_23_3.yaml  hbsp_test_24_3.yaml  hbsp_test_25_3.yaml  hbsp_test_26_3.yaml  hbsp_test_27_3.yaml  hbsp_test_28_3.yaml  hbsp_test_29_3.yaml  hbsp_test_2_3.yaml  hbsp_test_30_3.yaml  hbsp_test_31_3.yaml  hbsp_test_32_3.yaml  hbsp_test_33_3.yaml  hbsp_test_34_3.yaml  hbsp_test_35_3.yaml  hbsp_test_36_3.yaml  hbsp_test_37_3.yaml  hbsp_test_38_3.yaml  hbsp_test_39_3.yaml  hbsp_test_3_3.yaml  hbsp_test_40_3.yaml  hbsp_test_41_3.yaml  hbsp_test_42_3.yaml  hbsp_test_43_3.yaml  hbsp_test_44_3.yaml  hbsp_test_45_3.yaml  hbsp_test_46_3.yaml  (+40 more)
src/footstep_planner/src/environment/: environment_interpreter.cpp
src/footstep_planner/src/graphs/: homotopy_information.cpp  nav_lattice_2D.cpp  nav_lattice_8D.cpp
src/footstep_planner/src/heuristics/: backward_dijkstra_heuristic.cpp  homotopy_based_heuristic.cpp
src/footstep_planner/src/planners/: dijkstra.cpp  hbsp.cpp  mha.cpp
src/footstep_planner/src/test/: footstep_planner_test.cpp  project_environment_test.cpp
src/footstep_planner/src/utils/: state_conversions.cpp
src/footstep_planner/test/: dijkstra_stats.yaml  hbsp_stats_1.yaml  hbsp_stats_3.yaml  stats.yaml
src/footstep_planner/worlds/: README.md  export_meshes.py
src/footstep_planner/worlds/house/: platforms.stl
src/footstep_planner/worlds/toy/: obstacles.stl  platforms.stl  toy_world.blend
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: poppy_humanoid.urdf.xacro  poppy_joints.urdf.xacro
(+51 files in other folders)
