<package format="2">
    <name>robot_description</name>
    <version>0.0.0</version>
    <description>robot description</description>
    <maintainer email="vinitha.ranganeni@gmail.com">Vinitha Ranganeni</maintainer>
    <author>Vinitha Ranganeni</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
